--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,7 +30,8 @@ floating_modifier $mod
 # start a terminal
 #bindsym $mod+Return exec $term
 bindsym $mod+Return exec termite
-bindsym $mod+Shift+Return exec xterm -e ranger $HOME/Pictures/Wallpapers
+#bindsym $mod+Shift+Return exec xterm -e ranger $HOME/Pictures/Wallpapers
+bindsym $mod+Shift+Return exec "xterm -e python ~/Downloads/ranger/ranger.py -r ~/.config/ranger/ $HOME/Pictures/Wallpapers" #to use ueberzug as image preview method 
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -44,10 +45,10 @@ bindsym $mod+d exec rofi -show run -display-run
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
 
 # change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-#bindsym $mod+l focus up      ## i3lock is binded here
-bindsym $mod+ntilde focus right
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Left focus left
@@ -56,22 +57,16 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
-
-# alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
-bindsym $mod+h split h
+bindsym $mod+Shift+h split h
 
 # split in vertical orientation
-bindsym $mod+v split v
+bindsym $mod+Shift+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen
@@ -135,6 +130,9 @@ bindsym Control+Mod1+Shift+Right     exec "i3-msg move container to workspace ne
 bindsym Control+Mod1+Left            workspace prev
 bindsym Control+Mod1+Shift+Left      exec "i3-msg move container to workspace prev && i3-msg workspace prev"
 
+bindsym $mod+Shift+j           workspace prev
+bindsym $mod+Shift+k           workspace next
+
 workspace_auto_back_and_forth yes
 bindsym $mod+Tab workspace back_and_forth
 
@@ -150,11 +148,13 @@ bindsym --release $mod+Shift+t exec "~/bin/toggleScreen"
 bindsym $mod+u exec "~/bin/dmenuunicode"
 
 bindsym $mod+F1 exec --no-startup-id firefox
+bindsym $mod+Shift+F1 exec --no-startup-id qutebrowser
 bindsym $mod+F2 exec --no-startup-id agenda
 bindsym $mod+F3 exec --no-startup-id subl
 bindsym $mod+F4 exec --no-startup-id spotify
 bindsym $mod+F5 exec --no-startup-id google-chrome-stable
-bindsym $mod+F6 exec --no-startup-id dosbox
+bindsym $mod+Shift+F5 exec --no-startup-id surf google.com
+bindsym $mod+F6 exec --no-startup-id discord
 
 # Make the currently focused window a scratchpad
 bindsym $mod+Shift+minus move scratchpad
@@ -215,14 +215,15 @@ mode "$mode_gaps_outer" {
 #
 
 
-assign [class="Firefox"] $workspace1
-for_window [class="Firefox"] border none
+assign [class="firefox"] $workspace1
+for_window [class="firefox"] border none
+assign [class="qutebrowser"] $workspace1
 assign [class="Google-chrome"] $workspace5
 for_window [class="Google-chrome"] border none
 assign [class="Libreoffice"] $workspace2
+assign [class="Gnumeric"] $workspace2
 assign [class="Sublime_text"] $workspace3
 assign [class="GitKraken"] $workspace3
-assign [class="libreoffice"] $workspace10
 for_window [class="Spotify"] move to workspace $workspace4
 for_window [class="discord"] move to workspace $workspace6
 for_window [class="XTerm"] floating enable, resize set 640 480, move absolute position center, border none
@@ -231,6 +232,8 @@ for_window [class="TelegramDesktop"] move to workspace $workspace5, border none
 for_window [class="Tilda"] floating enable, border none
 assign [class="dosbox"] $workspace6
 assign [class="Eclipse"] $workspace3
+assign [class="jetbrains-pycharm-ce"] $workspace3
+for_window [class="Firefox" window_role="GtkFileChooserDialog"] resize set 1200 480, move absolute position center
 #floating_maximum_size 768 x 576
 
 #exec --no-startup-id firefox
@@ -240,13 +243,8 @@ exec --no-startup-id xfce4-power-manager
 exec --no-startup-id nm-applet
 exec --no-startup-id numlockx on
 exec --no-startup-id caffeine #Caffeine-ng
-#exec --no-startup-id
-
 
 exec_always --no-startup-id "compton --config ~/.config/compton.conf"
-
-# Neon
-#exec_always --no-startup-id compton -f -c --shadow-red 0.5 --shadow-green 0.1 --shadow-blue 0.4 -r 20
 
 #background             alpha.wallhaven.cc/
 exec_always --no-startup-id feh --bg-fill $HOME/.config/i3/wallpaper.jpg
