--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -57,7 +57,8 @@ font-1 = FontAwesome:size=11;2
 font-2 = "Wuncon Siji:pixelsize=10;1"
 font-3 = dejavusans:pixelsize=10;1
 font-4 = FontAwesome:size=11;1
-font-5 = Symbola:size=11;2
+font-5 = JoyPixels:scale=10;
+font-6 = Symbola:size=11;2
 
 ;font-0 = NotoSans-Regular:size=8;0
 ;font-1 = unifont:size=6;-3
@@ -315,7 +316,7 @@ label-disconnected-foreground = ${colors.foreground-alt}
 type = internal/date
 interval = 5
 
-date = %d-%m-%y
+date = %{A:gsimplecal &:}%d-%m-%y %{A}
 date-alt = %A, %d %B %Y
 
 time = %H:%M
