--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -118,11 +118,12 @@ inactive-opacity-override = false;
 alpha-step = 0.06;
 
 opacity-rule = [ 
-    "82:class_g = 'Termite'", 
+    "78:class_g = 'Termite'", 
     "80:class_g = 'Thunar'", 
-    "60:class_g = 'Rofi'", 
-    "100:class_g = 'Polybar'",
+    "80:class_g = 'Rofi'", 
+    "90:class_g = 'Polybar'",
     "90:class_g = 'Sublime_text'",
+    "75:class_g = 'Dunst'",
 
 ];
 
@@ -133,7 +134,7 @@ opacity-rule = [
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
 blur-background = true;
 blur-method = "kawase";
-blur-strength = 10;
+blur-strength = 8;
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
@@ -142,7 +143,8 @@ blur-background-exclude = [
     "window_type = 'dock'",
     "window_type = 'desktop'",
 	"class_g = 'Tilda'",
-	"class_g = 'Xfce4-screenshooter'"
+	"class_g = 'Xfce4-screenshooter'",
+	"class_g = 'Peek'"
 ];
 
 #################################
