--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -45,6 +45,7 @@ set use_preview_script true
 # This requires the console web browser "w3m" and a supported terminal.
 # It has been successfully tested with "xterm" and "urxvt" without tmux.
 set preview_images true
+set preview_images_method ueberzug
 
 # Use a unicode "..." character to mark cut-off filenames?
 set unicode_ellipsis false
