--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,9 +30,7 @@ floating_modifier $mod
 # start a terminal
 #bindsym $mod+Return exec $term
 bindsym $mod+Return exec termite
-#bindsym $mod+Shift+Return exec xterm -e ranger $HOME/Pictures/Wallpapers
-#to use ueberzug as image preview method
-bindsym $mod+Shift+Return exec "xterm -e python ~/Downloads/ranger/ranger.py -r ~/.config/ranger/ $HOME/Pictures/Wallpapers"
+bindsym $mod+Shift+Return exec xterm -e ranger $HOME/Pictures/Wallpapers
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -40,7 +38,7 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 exec_always xrdb ~/.Xresources
 #bindsym $mod+d exec --no-startup-id rofi -show run -display-run -bg "#223344" -fg "#cc5544" -hlbg "#cc5544" -hlfg "#eeccaa" -hide-scrollbar -font "SFNS Display Regular 13"
-bindsym $mod+d exec rofi -show run -display-run
+bindsym $mod+d exec "rofi -show drun -modi window,drun,emoji,run,ssh"
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
@@ -146,9 +144,9 @@ bindsym Print exec --no-startup-id scrot ~/Pictures/%Y-%m-%d-%T-screenshot.png
 bindsym Shift+Print exec --no-startup-id xfce4-screenshooter #imprimir pantalla
 bindsym --release $mod+Shift+c exec "~/bin/emojiArray | xclip -selection clipboard"
 bindsym --release $mod+Shift+t exec "~/bin/toggleScreen"
-bindsym $mod+u exec "~/bin/dmenuunicode"
+bindsym $mod+u exec "rofi -show emoji -modi emoji" 
 
-# bindsym $mod+F1 exec --no-startup-id firefox
+bindsym $mod+F1 exec --no-startup-id firefox
 bindsym $mod+Shift+F1 exec --no-startup-id qutebrowser
 bindsym $mod+F2 exec --no-startup-id agenda
 bindsym $mod+F3 exec --no-startup-id subl
@@ -219,7 +217,7 @@ mode "$mode_gaps_outer" {
 assign [class="(?i)firefox"] $workspace1
 for_window [class="(?i)firefox"] border none
 assign [class="qutebrowser"] $workspace1
-assign [class="Google-chrome"] $workspace1
+assign [class="Google-chrome"] $workspace5
 for_window [class="Google-chrome"] border none
 assign [class="Libreoffice"] $workspace2
 assign [class="Gnumeric"] $workspace2
