--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -28,7 +28,7 @@ margin-top = 5
 margin-bottom = 5
 
 [bar/example]
-;monitor = ${env:MONITOR:HDMI-1}
+monitor = ${env:MONITOR:}
 width = 100%
 height = 27
 offset-x = 0
