:desktop_computer: Dual monitor

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -104,6 +104,9 @@ shadow-exclude = [
 # Avoid drawing shadow on all shaped windows (see also: --detect-rounded-corners)
 shadow-ignore-shaped = false;
 
+# Shadows of maximized windows extend over to the next screen fix
+xinerama-shadow-crop = true;
+
 #################################
 #
 # Opacity
