--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -510,4 +510,6 @@ copytmap <ESC> q Q w <C-c>
 #Background
 map bg shell feh --bg-fill %f
 map bG shell cp %f $HOME/.config/i3/wallpaper.jpg && i3-msg restart
+map bH shell cp %f $HOME/.config/i3/wallpaper_1.jpg && i3-msg restart
 map br shell feh --randomize --bg-fill %d
+map bm shell feh --bg-fill %s
