--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -73,9 +73,9 @@ shadow-offset-y = -5;
 shadow-opacity = 0.5;
 
 # Set if you want different colour shadows
-shadow-red = 0.8;
-shadow-green = 0.02;
-shadow-blue = 0.36;
+shadow-red =   0.57;
+shadow-green = 0.17;
+shadow-blue =  0.69;
 
 # The shadow exclude options are helpful if you have shadows enabled. Due to the way compton draws its shadows, certain applications will have visual glitches
 # (most applications are fine, only apps that do weird things with xshapes or argb are affected).
@@ -120,12 +120,13 @@ frame-opacity = 1;
 inactive-opacity-override = false;
 alpha-step = 0.06;
 
-opacity-rule = [ 
-    "78:class_g = 'Termite'", 
-    "80:class_g = 'Thunar'", 
-    "80:class_g = 'Rofi'", 
+opacity-rule = [
+    "90:class_g = 'Termite'",
+    "80:class_g = 'Thunar'",
+    "80:class_g = 'Rofi'",
     "90:class_g = 'Polybar'",
     "90:class_g = 'Sublime_text'",
+    "90:class_g = 'Code'",
     "75:class_g = 'Dunst'",
 
 ];
@@ -145,9 +146,10 @@ blur-background-fixed = false;
 blur-background-exclude = [
     "window_type = 'dock'",
     "window_type = 'desktop'",
-	"class_g = 'Tilda'",
-	"class_g = 'Xfce4-screenshooter'",
-	"class_g = 'Peek'"
+    "class_g = 'Tilda'",
+    "class_g = 'Xfce4-screenshooter'",
+    "class_g = 'Peek'",
+    "class_g = 'Termite'"
 ];
 
 #################################
