--- a/.config/i3/config
+++ b/.config/i3/config
@@ -327,36 +327,15 @@ set $cyan       #2AA198
 set $yellow     #E1C61A
 set $pink       #DA496A
 
-set $bg #0a162b
+set $bg #202331
 set $fg #cc4455
+set $accent #c792ea
 
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-#bar {
-#    id bar-0
-#    #tray_output none
-#    position bottom
-#    status_command i3blocks -c $HOME/.i3/i3blocks.conf
-#    strip_workspace_numbers yes
-#
-#    colors {
-#        background $bg
-#        statusline $white
-#        separator  $gray
-#
-#    # workspace indicators border       backgr          text
-#        focused_workspace  $bg          $bg             $fg
-#        active_workspace   $white       $dark           $dark   #no se que es
-#        inactive_workspace $bg          $bg             $white
-#        urgent_workspace   $fg          $fg             $bg
-#    }
-#}
-
 # config colors
 #class                  border  backgr. text    indicator
-client.focused          #ee9966 #ee9966 $white   $pink
+client.focused          $accent $accent $white   $pink
 client.unfocused        $bg     $bg     $white   $pink
 client.focused_inactive $dark   $bg     $white   $pink
 client.urgent           $fg     $fg     $bg    $dark
