--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -397,7 +397,7 @@ bar-volume-empty-foreground = ${colors.foreground-alt}
 type = internal/battery
 battery = BAT1
 adapter = ADP1
-full-at = 94
+full-at = 90
 label-full =
 
 time-format = %H:%M
@@ -464,6 +464,8 @@ menu-0-0 = reboot
 menu-0-0-exec = menu-open-1
 menu-0-1 = power off
 menu-0-1-exec = menu-open-2
+menu-0-2 = suspend
+menu-0-2-exec = systemctl suspend
 
 menu-1-0 = cancel
 menu-1-0-exec = menu-open-0
