:up: Getting up to date
- Dock station autorandr setup
- Package list
- Polybar
- Anime wallpapers
- i3

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -41,6 +41,7 @@ shadow-blue = 0.69
 #
 # shadow-exclude = []
 shadow-exclude = [
+  "! name~=''",
   "name = 'Notification'",
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
@@ -57,7 +58,7 @@ shadow-exclude = [
 # shadow-exclude-reg = ""
 
 # Crop shadow of a window fully on a particular Xinerama screen to the screen.
-# xinerama-shadow-crop = false
+xinerama-shadow-crop = true
 
 
 #################################
@@ -101,7 +102,6 @@ fade-delta = 8
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.7;
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
@@ -111,7 +111,7 @@ inactive-opacity-override = false;
 # active-opacity = 1.0
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-inactive-dim = 0.3
+# inactive-dim = 0.3
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
@@ -134,7 +134,7 @@ opacity-rule = [
     "90:class_g = 'Polybar'",
     "90:class_g = 'Sublime_text'",
     "90:class_g = 'Code'",
-    "75:class_g = 'Dunst'",
+    "75:class_g = 'Dunst'"
 ]
 
 #################################
