--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -36,10 +36,10 @@ set confirm_on_delete multiple
 # Which script is used to generate file previews?
 # ranger ships with scope.sh, a script that calls external programs (see
 # README for dependencies) to preview images, archives, etc.
-set preview_script ~/.config/ranger/scope.sh
+# set preview_script ~/.config/ranger/scope.sh
 
 # Use the external preview script or display simple plain text previews?
-set use_preview_script true
+# set use_preview_script true
 
 # Preview images in full color with the external command "w3mimgpreview"?
 # This requires the console web browser "w3m" and a supported terminal.
