--- a/.config/i3/config
+++ b/.config/i3/config
@@ -38,8 +38,8 @@ bindsym $mod+Shift+q kill
 # start dmenu (a program launcher)
 exec_always xrdb ~/.Xresources
 #bindsym $mod+d exec --no-startup-id rofi -show run -display-run -bg "#223344" -fg "#cc5544" -hlbg "#cc5544" -hlfg "#eeccaa" -hide-scrollbar -font "SFNS Display Regular 13"
-bindsym $mod+d exec "rofi -theme-str 'element-icon { size: 1.0em;}' -show drun -modi window,drun,emoji,run,ssh"
-bindsym $mod+Shift+d exec "rofi -show window -modi window,drun,emoji,run,ssh"
+bindsym $mod+d exec "rofi -theme-str 'element-icon { size: 1.0em;}' -show drun -modi window,drun,run,ssh"
+bindsym $mod+Shift+d exec "rofi -show window -modi window,drun,run,ssh"
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
 # bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
@@ -139,26 +139,29 @@ bindsym $mod+Tab workspace back_and_forth
 # Moving workspaces between screens
 bindsym $mod+p move workspace to output right
 bindsym $mod+Shift+p exec "~/bin/pantalla"
-workspace $workspace5 output VGA1
+workspace $workspace5 output DP-2-3
+exec --no-startup-id dockd --daemon
 
 #bindsym
 
-bindsym $mod+m exec thunar #$mod+m => thunar
-# bindsym $mod+Shift+m exec thunar ~/UTN #$mod+Shift+m => nautilus
-bindsym Print exec --no-startup-id scrot ~/Pictures/%Y-%m-%d-%T-screenshot.png
-bindsym Shift+Print exec --no-startup-id xfce4-screenshooter #imprimir pantalla
-bindsym --release $mod+Shift+c exec "~/bin/emojiArray | xclip -selection clipboard"
-bindsym --release $mod+Shift+t exec "~/bin/toggleScreen"
-bindsym $mod+u exec "rofimoji"
+bindsym $mod+m          exec thunar
+ #
+bindsym Shift+Print     exec --no-startup-id "scrot ~/Pictures/%Y-%m-%d-%T-screenshot.png; notify-send Screenshot\ taken"
+bindsym Print           exec --no-startup-id xfce4-screenshooter
+# bindsym $mod+Shift+c exec "~/bin/emojiArray | xclip -selection clipboard"
+bindsym $mod+Shift+t    exec "~/bin/toggleScreen"
+bindsym $mod+u          exec "rofimoji"
 
-bindsym $mod+F1 exec --no-startup-id vivaldi-stable
-bindsym $mod+Shift+F1 exec --no-startup-id qutebrowser
-bindsym $mod+F2 exec --no-startup-id agenda
-bindsym $mod+F3 exec --no-startup-id code
-bindsym $mod+F4 exec --no-startup-id spotify
-bindsym $mod+F5 exec --no-startup-id google-chrome-stable
-bindsym $mod+Shift+F5 exec --no-startup-id surf google.com
-bindsym $mod+F6 exec --no-startup-id discord
+bindsym $mod+F1         exec --no-startup-id vivaldi-stable
+bindsym $mod+Shift+F1   exec --no-startup-id qutebrowser
+bindsym $mod+F2         exec --no-startup-id agenda
+bindsym $mod+F3         exec --no-startup-id phpstorm
+bindsym $mod+F4         exec --no-startup-id spotify
+bindsym $mod+F5         exec --no-startup-id gtk-launch WhatsApp.desktop
+bindsym $mod+Shift+F5   exec --no-startup-id surf google.com
+bindsym $mod+F6         exec --no-startup-id discord
+bindsym $mod+F7         exec --no-startup-id steam-native
+bindsym $mod+F8         exec --no-startup-id gitkraken
 
 # Make the currently focused window a scratchpad
 bindsym $mod+Shift+minus move scratchpad
@@ -169,9 +172,6 @@ bindsym $mod+minus scratchpad show
 exec --no-startup-id termite --role scratchpad
 for_window [class="Termite" window_role="scratchpad"] floating enable,resize set 1199 482, move position center, move scratchpad
 
-# Terminal Vim
-exec --no-startup-id termite --role vim --exec 'nvim'
-for_window [class="Termite" window_role="vim"] move to workspace $workspace3
 
 # i3-gaps
 for_window [class="^.*"] border pixel 1
@@ -221,30 +221,27 @@ mode "$mode_gaps_outer" {
         bindsym Escape mode "default"
 }
 
-workspace $workspace3 gaps inner 15
-#
+# workspace $workspace3 gaps inner 15
 
 
-assign [class="(?i)firefox"] $workspace1
-for_window [class="(?i)firefox"] border none
-assign [class="qutebrowser"] $workspace1
-assign [class="Google-chrome"] $workspace5
-for_window [class="Google-chrome"] border none
-assign [class="Libreoffice"] $workspace2
-assign [class="Gnumeric"] $workspace2
-assign [class="Sublime_text"] $workspace3
-assign [class="Code"] $workspace3
-assign [class="GitKraken"] $workspace8
+assign [class="(?i)firefox"]            $workspace1
+assign [class="Eclipse"]                $workspace3
+assign [class="jetbrains-pycharm-ce"]   $workspace3
+assign [class="Google-chrome"]          $workspace5
+assign [class="whatsappweb-nativefier"] $workspace5
+assign [class="discord"]                $workspace6
+assign [class="Steam"]                 $workspace7
+assign [class="GitKraken"]              $workspace8
 for_window [class="Spotify"] move to workspace $workspace4
-for_window [class="discord"] move to workspace $workspace6
 for_window [class="XTerm"] floating enable, resize set 640 480, move position center, border none
 for_window [class="feh"] floating enable, resize set 640 480, move position mouse, border none
 for_window [class="Tilda"] floating enable, border none
-assign [class="dosbox"] $workspace7
-assign [class="Eclipse"] $workspace3
-assign [class="jetbrains-pycharm-ce"] $workspace3
+for_window [class="Anki"] floating enable
 for_window [class="(?i)firefox" window_role="GtkFileChooserDialog"] resize set 1200 480, move position center
-#floating_maximum_size 768 x 576
+# for_window [class="^Steam"] floating enable
+for_window [class="^Steam" title="Friends List"] floating enable
+for_window [class="^Steam" title="Steam - News"] floating enable
+for_window [title="win0"] floating enable
 
 #exec --no-startup-id firefox
 exec --no-startup-id dropbox start
@@ -252,10 +249,11 @@ exec --no-startup-id xfce4-clipman
 exec --no-startup-id xfce4-power-manager
 exec --no-startup-id nm-applet
 exec --no-startup-id numlockx on
-exec --no-startup-id caffeine #Caffeine-ng
+exec --no-startup-id caffeine
 exec --no-startup-id redshift-gtk
+exec --no-startup-id optimus-manager-qt
 
-exec_always --no-startup-id "compton --config ~/.config/compton.conf"
+exec_always --no-startup-id picom
 
 #background             alpha.wallhaven.cc/
 exec_always --no-startup-id feh --bg-fill $HOME/.config/i3/wallpaper.jpg --bg-fill $HOME/.config/i3/wallpaper_1.jpg
@@ -350,24 +348,17 @@ client.urgent           $fg     $fg     $bg    $dark
 
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+bindsym XF86AudioMicMute exec --no-startup-id amixer set Capture toggle     # Toggle mic
+bindsym XF86AudioMute exec --no-startup-id amixer sset 'Master' toggle      # Toggle volume
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer sset 'Master' 5%-  # decrease sound volume
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer sset 'Master' 5%+  # increase sound volume
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec light -A 5 # increase screen brightness
+bindsym XF86MonBrightnessDown exec light -U 5 # decrease screen brightness
 
-# Touchpad controls
-bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
-
-exec --no-startup-id xinput --set-prop 13 "Synaptics Two-Finger Scrolling" 1 1 #Enable touchpad horizontal scrolling
-
-# Media player controls
-bindsym XF86AudioPlay exec playerctl play
-bindsym XF86AudioPause exec playerctl pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
+# Change TrackPoint sensitivity
+exec --no-startup-id sleep 5; echo -n 140 > /sys/devices/platform/i8042/serio1/serio2/sensitivity
 
 # Setup the lock screen
 #exec --no-startup-id xset s noblank
